# clay-ai-hyperscale

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: datacenters.geojson
qgis/: datacenters.gpkg  datacenters.qgz
src/datacenter_detector/: __init__.py
src/datacenter_detector/data/: datamodule.py  dataset.py
src/datacenter_detector/models/: unet.py
