[project]
name = "datacenter-detector"
version = "0.1.0"
description = "Datacenter detection from aerial imagery using U-Net semantic segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pystac-client>=0.9.0",
    "planetary-computer>=1.0.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.20.0",
]

[project.scripts]
datacenter-train = "datacenter_detector.cli:train"
datacenter-detect = "datacenter_detector.cli:detect"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
